kubernetes/apps/vllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-backend
  namespace: llm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: vllm.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-backend
                port:
                  number: 8000

  tls:
    - hosts:
        - vllm.homelab.leehosanganson.dev
      secretName: vllm-tls
